# StrataC2-Agents

dll_test/: CMakeLists.txt  main.cpp
http/: CMakeLists.txt  Makefile  compile.bat  library.h  main.cpp
http/commands/: CommandHelper.h
http/conf/: Callbacks.cpp  Config.template
http/dll/: CMakeLists.txt  library.cpp
http/dll/commands/: CommandHelper.cpp  Filesystem.cpp  Management.cpp
http/dll/conf/: Callbacks.cpp  Config.h
http/exe/: CMakeLists.txt  main.cpp
http/exe/commands/: CommandHelper.cpp  CommandHelper.h  Execution.cpp  Filesystem.cpp
http/exe/conf/: Callbacks.cpp  Callbacks.h  Config.h
sc_test/: CMakeLists.txt  main.cpp
